--- a/F_Principale.ui
+++ b/F_Principale.ui
@@ -33,37 +33,37 @@
     <property name="title">
      <string>Fichier</string>
     </property>
-    <addaction name="On_Ouvrir"/>
-    <addaction name="On_Sauvegarder"/>
-    <addaction name="On_Choix_Sondes"/>
+    <addaction name="actionOuvrir"/>
+    <addaction name="actionSauvegarder"/>
+    <addaction name="actionChoixSondes"/>
     <addaction name="separator"/>
-    <addaction name="On_Quitter"/>
+    <addaction name="actionQuitter"/>
    </widget>
    <widget class="QMenu" name="menuDonn_es">
     <property name="title">
      <string>Données</string>
     </property>
     <addaction name="actionAcquisition"/>
-    <addaction name="actionExporter_les_donn_es"/>
-    <addaction name="actionSauvegarder_les_donn_es"/>
+    <addaction name="actionExporterDonnes"/>
+    <addaction name="actionSauvegarderDonees"/>
    </widget>
    <widget class="QMenu" name="menuAide">
     <property name="title">
      <string>Aide</string>
     </property>
-    <addaction name="actionA_propos"/>
+    <addaction name="actionAPropos"/>
    </widget>
    <addaction name="menuFichier"/>
    <addaction name="menuDonn_es"/>
    <addaction name="menuAide"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="On_Ouvrir">
+  <action name="actionOuvrir">
    <property name="text">
     <string>Ouvrir fichier de configuration</string>
    </property>
   </action>
-  <action name="On_Sauvegarder">
+  <action name="actionSauvegarder">
    <property name="text">
     <string>Sauvegarder fichier de configuration</string>
    </property>
@@ -78,22 +78,22 @@
     <string>Manuel</string>
    </property>
   </action>
-  <action name="actionExporter_les_donn_es">
+  <action name="actionExporterDonnes">
    <property name="text">
     <string>Exporter les données</string>
    </property>
   </action>
-  <action name="actionSauvegarder_les_donn_es">
+  <action name="actionSauvegarderDonees">
    <property name="text">
     <string>Sauvegarder les données</string>
    </property>
   </action>
-  <action name="On_Choix_Sondes">
+  <action name="actionChoixSondes">
    <property name="text">
     <string>Choix des sondes</string>
    </property>
   </action>
-  <action name="On_Quitter">
+  <action name="actionQuitter">
    <property name="text">
     <string>Quitter</string>
    </property>
@@ -103,7 +103,7 @@
     <string>Acquisition</string>
    </property>
   </action>
-  <action name="actionA_propos">
+  <action name="actionAPropos">
    <property name="text">
     <string>À propos</string>
    </property>
@@ -112,7 +112,7 @@
  <resources/>
  <connections>
   <connection>
-   <sender>On_Quitter</sender>
+   <sender>actionQuitter</sender>
    <signal>triggered()</signal>
    <receiver>F_Principale</receiver>
    <slot>close()</slot>
@@ -144,7 +144,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>actionA_propos</sender>
+   <sender>actionAPropos</sender>
    <signal>triggered()</signal>
    <receiver>F_Principale</receiver>
    <slot>displayAbout()</slot>
@@ -160,7 +160,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>On_Choix_Sondes</sender>
+   <sender>actionChoixSondes</sender>
    <signal>triggered()</signal>
    <receiver>F_Principale</receiver>
    <slot>displaySelection()</slot>
