--- a/F_Sonde.ui
+++ b/F_Sonde.ui
@@ -10,81 +10,99 @@
     <height>373</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>400</width>
+    <height>373</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>400</width>
+    <height>373</height>
+   </size>
+  </property>
+  <property name="baseSize">
+   <size>
+    <width>400</width>
+    <height>373</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Acquisition</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="2" column="0">
-    <widget class="QCheckBox" name="checkBox">
+    <widget class="QCheckBox" name="cbModeVisualisation">
      <property name="text">
       <string>Visualisation uniquement</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="0">
-    <widget class="QToolButton" name="BtnAcquisition">
-     <property name="text">
-      <string>Automatique</string>
-     </property>
-    </widget>
-   </item>
    <item row="0" column="1" rowspan="10" colspan="2">
-    <widget class="QTableView" name="TableurValeurs"/>
+    <widget class="QTableView" name="tbValeurs"/>
    </item>
    <item row="6" column="0">
-    <widget class="QLabel" name="LabelIntervalle">
+    <widget class="QLabel" name="tlIntervalle">
      <property name="text">
-      <string>Durée entre 2 mesures</string>
+      <string>Durée entre 2 mesures :</string>
      </property>
     </widget>
    </item>
    <item row="8" column="0">
-    <widget class="QLabel" name="LabelDateHeure">
+    <widget class="QLabel" name="tlDateHeure">
      <property name="text">
-      <string>Date et heure du début</string>
+      <string>Date et heure du début :</string>
      </property>
     </widget>
    </item>
    <item row="10" column="0">
-    <widget class="QTimeEdit" name="HeureAcquisition"/>
-   </item>
-   <item row="10" column="2">
-    <widget class="QPushButton" name="BtnStopper">
-     <property name="text">
-      <string>Stopper</string>
-     </property>
-    </widget>
+    <widget class="QTimeEdit" name="tiHeureAcquisition"/>
    </item>
    <item row="1" column="0">
-    <widget class="QLCDNumber" name="Valeur"/>
+    <widget class="QLCDNumber" name="lcdValeur"/>
    </item>
    <item row="10" column="1">
-    <widget class="QPushButton" name="BtnLancer">
+    <widget class="QPushButton" name="btnLancer">
      <property name="text">
       <string>Lancer</string>
      </property>
     </widget>
    </item>
    <item row="4" column="0">
-    <widget class="QLabel" name="LabelTempsAcqui">
+    <widget class="QLabel" name="tlTpsAcquisition">
      <property name="text">
-      <string>Temps d'acquisition (minute)</string>
+      <string>Temps d'acquisition (minutes) :</string>
      </property>
     </widget>
    </item>
    <item row="5" column="0">
-    <widget class="QLineEdit" name="TexteTempsAcqui"/>
+    <widget class="QLineEdit" name="leTpsAcquisition"/>
    </item>
    <item row="7" column="0">
-    <widget class="QLineEdit" name="TexteIntervalle"/>
+    <widget class="QLineEdit" name="leIntervalle"/>
    </item>
    <item row="9" column="0">
-    <widget class="QDateEdit" name="DateAcquisition"/>
+    <widget class="QDateEdit" name="deDateAcquisition"/>
    </item>
    <item row="0" column="0">
-    <widget class="QLabel" name="LabelValeur">
+    <widget class="QLabel" name="tlValeur">
      <property name="text">
-      <string>Valeur</string>
+      <string>Valeur :</string>
+     </property>
+    </widget>
+   </item>
+   <item row="10" column="2">
+    <widget class="QPushButton" name="btnStopper">
+     <property name="text">
+      <string>Stopper</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0">
+    <widget class="QPushButton" name="btnModeAcquisition">
+     <property name="text">
+      <string>Automatique</string>
      </property>
     </widget>
    </item>
