--- a/F_Sonde.ui
+++ b/F_Sonde.ui
@@ -72,7 +72,7 @@
    <item row="4" column="0">
     <widget class="QLabel" name="tlTpsAcquisition">
      <property name="text">
-      <string>Temps d'acquisition (minutes) :</string>
+      <string>Temps d'acquisition :</string>
      </property>
     </widget>
    </item>
