--- a/F_Sonde.ui
+++ b/F_Sonde.ui
@@ -68,7 +68,7 @@
    <item row="10" column="1">
     <widget class="QPushButton" name="btnLancer">
      <property name="text">
-      <string>Lancer</string>
+      <string/>
      </property>
     </widget>
    </item>
