--- a/F_Principale.ui
+++ b/F_Principale.ui
@@ -85,10 +85,16 @@
    <property name="text">
     <string>Ouvrir paramètres d'acquisition</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+O</string>
+   </property>
   </action>
   <action name="actionSauvegarder">
    <property name="text">
     <string>Sauvegarder paramètres d'acquisition</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
    </property>
   </action>
   <action name="actionAutomatique">
@@ -115,10 +121,16 @@
    <property name="text">
     <string>Choix des sondes</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+C</string>
+   </property>
   </action>
   <action name="actionQuitter">
    <property name="text">
     <string>Quitter</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
    </property>
   </action>
   <action name="actionAcquisition">
@@ -130,10 +142,13 @@
    <property name="text">
     <string>À propos</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+F1</string>
+   </property>
   </action>
   <action name="actionLancerTous">
    <property name="icon">
-    <iconset resource="ressourcegexao51.qrc">
+    <iconset resource="icones.qrc">
      <normaloff>:/new/prefix1/start_all.ico</normaloff>:/new/prefix1/start_all.ico</iconset>
    </property>
    <property name="text">
@@ -142,7 +157,7 @@
   </action>
   <action name="actionStopperTous">
    <property name="icon">
-    <iconset resource="ressourcegexao51.qrc">
+    <iconset resource="icones.qrc">
      <normaloff>:/new/prefix1/stop_all.ico</normaloff>:/new/prefix1/stop_all.ico</iconset>
    </property>
    <property name="text">
@@ -151,7 +166,7 @@
   </action>
   <action name="actionHeureDatePartout">
    <property name="icon">
-    <iconset resource="ressourcegexao51.qrc">
+    <iconset resource="icones.qrc">
      <normaloff>:/new/prefix1/date_clock.ico</normaloff>:/new/prefix1/date_clock.ico</iconset>
    </property>
    <property name="text">
@@ -160,7 +175,7 @@
   </action>
  </widget>
  <resources>
-  <include location="ressourcegexao51.qrc"/>
+  <include location="icones.qrc"/>
  </resources>
  <connections>
   <connection>
