--- a/F_Sonde.ui
+++ b/F_Sonde.ui
@@ -32,14 +32,25 @@
    <string>Acquisition</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="6" column="0">
-    <widget class="QSpinBox" name="spIntervalle"/>
+   <item row="0" column="0">
+    <widget class="QLabel" name="tlValeur">
+     <property name="text">
+      <string>Valeur :</string>
+     </property>
+    </widget>
    </item>
-   <item row="4" column="0">
-    <widget class="QLineEdit" name="leTpsAcquisition"/>
-   </item>
-   <item row="0" column="1" rowspan="9" colspan="2">
+   <item row="0" column="1" rowspan="10" colspan="2">
     <widget class="QTableView" name="tvValeurs"/>
+   </item>
+   <item row="1" column="0">
+    <widget class="QLCDNumber" name="lcdValeur">
+     <property name="font">
+      <font>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
+     </property>
+    </widget>
    </item>
    <item row="2" column="0">
     <widget class="QPushButton" name="btnModeAcquisition">
@@ -55,12 +66,8 @@
      </property>
     </widget>
    </item>
-   <item row="7" column="0">
-    <widget class="QLabel" name="tlDateHeure">
-     <property name="text">
-      <string>Date et heure du début :</string>
-     </property>
-    </widget>
+   <item row="4" column="0">
+    <widget class="QLineEdit" name="leTpsAcquisition"/>
    </item>
    <item row="5" column="0">
     <widget class="QLabel" name="tlIntervalle">
@@ -69,35 +76,35 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="0">
-    <widget class="QLabel" name="tlValeur">
-     <property name="text">
-      <string>Valeur :</string>
-     </property>
-    </widget>
+   <item row="6" column="0">
+    <widget class="QSpinBox" name="spIntervalle"/>
    </item>
-   <item row="1" column="0">
-    <widget class="QLCDNumber" name="lcdValeur"/>
-   </item>
-   <item row="9" column="1">
-    <widget class="QPushButton" name="btnLancer">
+   <item row="7" column="0">
+    <widget class="QLabel" name="tlDateHeure">
      <property name="text">
-      <string/>
+      <string>Date et heure du début :</string>
      </property>
     </widget>
    </item>
    <item row="8" column="0">
     <widget class="QDateEdit" name="deDateAcquisition"/>
    </item>
-   <item row="9" column="2">
-    <widget class="QPushButton" name="btnStopper">
+   <item row="9" column="0">
+    <widget class="QTimeEdit" name="tiHeureAcquisition"/>
+   </item>
+   <item row="10" column="1">
+    <widget class="QPushButton" name="btnLancer">
      <property name="text">
-      <string/>
+      <string>Lancer</string>
      </property>
     </widget>
    </item>
-   <item row="9" column="0">
-    <widget class="QTimeEdit" name="tiHeureAcquisition"/>
+   <item row="10" column="2">
+    <widget class="QPushButton" name="btnStopper">
+     <property name="text">
+      <string>Stopper</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
