--- a/F_Principale.ui
+++ b/F_Principale.ui
@@ -154,6 +154,9 @@
    <property name="text">
     <string>Lancer toutes les sondes</string>
    </property>
+   <property name="toolTip">
+    <string>Demarrer l'acquisition de toutes les sondes</string>
+   </property>
   </action>
   <action name="actionStopperTous">
    <property name="icon">
@@ -161,7 +164,7 @@
      <normaloff>:/new/prefix1/stop_all.ico</normaloff>:/new/prefix1/stop_all.ico</iconset>
    </property>
    <property name="text">
-    <string>Stopper toutes les sondes</string>
+    <string>Stopper l'acquisition de toutes les sondes</string>
    </property>
   </action>
   <action name="actionHeureDatePartout">
