--- a/icones.qrc
+++ b/icones.qrc
@@ -1,15 +1,15 @@
 <RCC>
     <qresource prefix="/new/prefix1">
-        <file>icones/clock.ico</file>
-        <file>icones/date_clock.ico</file>
-        <file>icones/icone_g_google.ico</file>
-        <file>icones/icone_g_key.ico</file>
-        <file>icones/led_rouge_red.ico</file>
-        <file>icones/led_verte_red.ico</file>
-        <file>icones/rec.ico</file>
-        <file>icones/start.ico</file>
-        <file>icones/start_all.ico</file>
-        <file>icones/stop.ico</file>
-        <file>icones/stop_all.ico</file>
+        <file>images/icones/clock.ico</file>
+        <file>images/icones/date_clock.ico</file>
+        <file>images/icones/icone_g_google.ico</file>
+        <file>images/icones/icone_g_key.ico</file>
+        <file>images/icones/led_rouge_red.ico</file>
+        <file>images/icones/led_verte_red.ico</file>
+        <file>images/icones/rec.ico</file>
+        <file>images/icones/start.ico</file>
+        <file>images/icones/start_all.ico</file>
+        <file>images/icones/stop.ico</file>
+        <file>images/icones/stop_all.ico</file>
     </qresource>
 </RCC>
