--- a/src/F_ChoisirSonde.ui
+++ b/src/F_ChoisirSonde.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>941</width>
+    <width>1131</width>
     <height>553</height>
    </rect>
   </property>
@@ -42,7 +42,7 @@
        </property>
        <layout class="QGridLayout" name="LayListeCapteursEtActionneurs">
         <item row="0" column="0">
-         <widget class="QComboBox" name="CBx_Interface">
+         <widget class="QComboBox" name="CB_Interface">
           <property name="minimumSize">
            <size>
             <width>270</width>
@@ -56,6 +56,9 @@
      </item>
      <item>
       <widget class="QGraphicsView" name="Vue">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
        <property name="minimumSize">
         <size>
          <width>621</width>
@@ -93,9 +96,9 @@
       <number>0</number>
      </property>
      <item>
-      <widget class="QPushButton" name="Bt_Annuler">
+      <widget class="QPushButton" name="Btn_Supprimer">
        <property name="text">
-        <string>Annuler</string>
+        <string>Supprimer</string>
        </property>
        <property name="icon">
         <iconset resource="icones.qrc">
@@ -113,7 +116,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="Bt_Valider">
+      <widget class="QPushButton" name="Btn_Valider">
        <property name="text">
         <string>Valider</string>
        </property>
